Server: Use Java records for DTOs
No need for Lombok for these anymore.